# agent-swarm-eval-arena

./: .editorconfig  .env.example  .gitignore  =23.7.0  =3.1  API_REFERENCE.md  ARCHITECTURE.md  AUTONOMOUS_SDLC_COMPLETION_FINAL_REPORT.md  AUTONOMOUS_SDLC_COMPLETION_REPORT.md  AUTONOMOUS_SDLC_COMPLETION_SUMMARY.md  AUTONOMOUS_SDLC_EXECUTION_REPORT.md  AUTONOMOUS_SDLC_FINAL_COMPLETION_REPORT.md  AUTONOMOUS_SDLC_FINAL_REPORT.md  AUTONOMOUS_SDLC_QUALITY_VALIDATION.json  AUTONOMOUS_SDLC_REPORT.md  AUTONOMOUS_SDLC_SUCCESS_REPORT.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DEPLOYMENT.md  DEPLOYMENT_GUIDE.md  PRODUCTION_CERTIFICATION.md  PROJECT_CHARTER.md  README.md  RESEARCH_FINDINGS.md  SECURITY.md  advanced_production_deployment.py  autonomous_quality_gates.py  autonomous_sdlc_complete_demo.py  autonomous_sdlc_comprehensive_demo.py  autonomous_sdlc_demo_results_1756092177.json  autonomous_sdlc_simple_demo.py  breakthrough_validation_report_1755930597.json  comprehensive_breakthrough_validation.py  comprehensive_quality_gates.py  comprehensive_quality_gates_test.py  comprehensive_quality_validation.py  comprehensive_validation.py  direct_sentiment_test.py  enhanced_monitoring_demo.py  (+58 more)
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yml  init.sql
autonomous_sdlc/: __init__.py  config.py
deployment/: Dockerfile  production_config.py
docker/: Dockerfile  Dockerfile.production  docker-compose.production.yml  docker-compose.yml
docs/: API_REFERENCE.md  DEPLOYMENT_GUIDE.md  PERFORMANCE_BENCHMARKS.md  QUICK_START_GUIDE.md  README.md  RESEARCH_FINDINGS.md  ROADMAP.md
examples/: basic_usage.py  benchmark_example.py  breakthrough_research_demo.py  distributed_example.py  enhanced_robustness_demo.py  generation1_enhanced_demo.py  generation2_robustness_demo.py  generation3_quick_demo.py  generation3_scaling_demo.py  quick_start.py  scaling_optimization_demo.py  sentiment_aware_simulation.py
k8s/: deployment.yaml  namespace.yaml  production-deployment.yaml  ray-cluster.yaml  secrets.yaml
scripts/: cleanup.sh  deploy.sh
security/: __init__.py  security_config.py
swarm_arena/: __init__.py  cli.py  exceptions.py
tests/: test_advanced_features.py  test_benchmarks.py  test_complete_integration.py  test_comprehensive.py  test_core.py  test_distributed.py  test_emotional_state.py  test_integration.py  test_monitoring.py  test_performance.py  test_resilience.py  (+4 more)
(+100 files in other folders)
