[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "swarm-arena"
version = "0.1.0"
description = "Real-Time Arena for Multi-Agent Reinforcement Learning with 1000+ Concurrent Agents"
authors = [{name = "Daniel Schmidt", email = "daniel@terragon.ai"}]
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "numpy>=1.21.0",
    "gymnasium>=0.29.0",
    "ray[default]>=2.8.0",
    "websockets>=11.0",
    "fastapi>=0.104.0",
    "uvicorn>=0.24.0",
    "pydantic>=2.5.0",
    "matplotlib>=3.7.0",
    "seaborn>=0.12.0",
    "pandas>=2.0.0",
    "scipy>=1.11.0",
    "tqdm>=4.65.0",
    "psutil>=5.9.0",
    "networkx>=3.1",
]

[project.optional-dependencies]
viz = [
    "plotly>=5.17.0",
    "dash>=2.14.0",
    "dash-bootstrap-components>=1.5.0",
    "opencv-python>=4.8.0",
    "pillow>=10.0.0",
]
distributed = [
    "redis>=5.0.0",
    "kubernetes>=28.1.0",
    "docker>=6.1.0",
]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.7.0",
    "isort>=5.12.0",
    "flake8>=6.0.0",
    "mypy>=1.5.0",
    "pre-commit>=3.3.0",
]

[project.urls]
Homepage = "https://github.com/danieleschmidt/agent-swarm-eval-arena"
Repository = "https://github.com/danieleschmidt/agent-swarm-eval-arena"
Issues = "https://github.com/danieleschmidt/agent-swarm-eval-arena/issues"

[project.scripts]
swarm-arena = "swarm_arena.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["swarm_arena*"]

[tool.black]
line-length = 88
target-version = ['py39']

[tool.isort]
profile = "black"
multi_line_output = 3

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "--cov=swarm_arena --cov-report=html --cov-report=term-missing"